# vepf

./: .gitignore  CMakeLists.txt  Makefile  array.c  bbool.c  main.c  null.d  vepf.c
src/: array.c  array.h  bbool.c  bbool.h  vepf.c  vepf.h
test/: CMakeLists.txt  vepf.cpp
test/src/: vepf.cpp
